tests/invalid/cleanup/unused_variable.php
<?php

$unused = 42;

echo "Done";

